LEXEVS-5360 Assert
Adding comments to Asserts